version/0.14/_sources/api/solver/_autosummary/ansys.fluent.core.solver.flobject.NamedObject.rst.txt
ansys.fluent.core.solver.flobject.NamedObject
=============================================

.. currentmodule:: ansys.fluent.core.solver.flobject

.. autoclass:: NamedObject

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      ~NamedObject.__init__
      ~NamedObject.get_attr
      ~NamedObject.get_attrs
      ~NamedObject.get_object_names
      ~NamedObject.get_state
      ~NamedObject.is_active
      ~NamedObject.is_read_only
      ~NamedObject.items
      ~NamedObject.keys
      ~NamedObject.print_state
      ~NamedObject.rename
      ~NamedObject.set_flproxy
      ~NamedObject.set_state
      ~NamedObject.to_python_keys
      ~NamedObject.to_scheme_keys
      ~NamedObject.user_creatable
      ~NamedObject.values
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~NamedObject.command_names
      ~NamedObject.flproxy
      ~NamedObject.fluent_name
      ~NamedObject.obj_name
      ~NamedObject.parent
      ~NamedObject.path
      ~NamedObject.query_names
   
   