version/0.20/_sources/api/solver/_autosummary/ansys.fluent.core.solver.flobject.NamedObject.rst.txt
ansys.fluent.core.solver.flobject.NamedObject
=============================================

.. currentmodule:: ansys.fluent.core.solver.flobject

.. autoclass:: NamedObject

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      ~NamedObject.__init__
      ~NamedObject.after_execute
      ~NamedObject.before_execute
      ~NamedObject.find_object
      ~NamedObject.get_attr
      ~NamedObject.get_attrs
      ~NamedObject.get_completer_info
      ~NamedObject.get_object_names
      ~NamedObject.get_state
      ~NamedObject.is_active
      ~NamedObject.is_read_only
      ~NamedObject.items
      ~NamedObject.keys
      ~NamedObject.print_state
      ~NamedObject.set_flproxy
      ~NamedObject.set_state
      ~NamedObject.state_with_units
      ~NamedObject.to_python_keys
      ~NamedObject.to_scheme_keys
      ~NamedObject.user_creatable
      ~NamedObject.values
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~NamedObject.command_names
      ~NamedObject.file_transfer_service
      ~NamedObject.flproxy
      ~NamedObject.fluent_name
      ~NamedObject.obj_name
      ~NamedObject.parent
      ~NamedObject.path
      ~NamedObject.python_name
      ~NamedObject.python_path
      ~NamedObject.query_names
   
   